--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "repositories": {
         "bobanum/restinpeace": {
             "type": "path",
-            "url": "C:\\Users\\bo_ba\\Github\\Github_bobanum\\RestInPeace"
+            "url": "C:\\Users\\bo_ba\\github\\github_bobanum\\RestInPeace"
         }
     }
 }
