--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@bobanum/vue-model": "^0.0.1",
+    "axios": "^1.6.5",
     "sass": "^1.69.7"
   }
 }
